--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,6 +2,8 @@ Options +FollowSymLinks
 RewriteEngine On
 Options -MultiViews
 RewriteBase /
+#Etiquetas contacto
+Rewriterule ^contactos/etiqueta/([a-zA-Z0-9-]+)*/?$ contactos/ini.php?etiqueta=$1 [NC,QSA,L]
 #Controles generales
 Rewriterule ^([a-zA-Z-]+)/([a-zA-Z0-9,]+)/([a-zA-Z0-9-]+)/?$ $1/$3/ini.php?id=$2 [NC,QSA,L]
 Rewriterule ^([a-zA-Z-]+)/?$ $1/ini.php [L]
